===============
lmirror changes
===============

NEXT (in development)
=====================

Changes
+++++++

* Added lmirror script and setup.py to install lmirror.

* Added lmirror init command which creates a simple mirror set and makes an
  initial journal.

* Added lmirror finish-change command which finishes an open change.