@@ -44,12 +44,14 @@ import sys
 
 
 def _find_command(cmd_name):
+    cmd_name = cmd_name.replace('-', '_')
     classname = "%s" % cmd_name
     modname = "l_mirror.commands.%s" % cmd_name
     try:
         _temp = __import__(modname, globals(), locals(), [classname])
-    except ImportError:
-        raise KeyError("Could not import command module %s" % modname)
+    except ImportError, e:
+        raise KeyError("Could not import command module %s: %s" % (
+            modname, e))
     result = getattr(_temp, classname, None)
     if result is None:
         raise KeyError(
